# crucible-rl

./: .gitignore  README.md  pyproject.toml
docs/: MPS_LEAK.md  NOTES.md  PHASE1.md  ROADMAP.md
scripts/: mps_leak_repro.py  mps_op_isolate.py  plot_run.py  supervise.sh
src/crucible/: checkpoint.py  config.py  data.py  eval.py  grpo.py  metrics.py  model.py  rewards.py  train.py  utils.py
tests/: test_rewards.py
