[project]
name = "crucible"
version = "0.1.0"
description = "GRPO reasoning trainer: improve a small LLM's math reasoning with verifiable rewards, runnable on a 48GB Mac."
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
    "numpy>=1.26",
]

[project.optional-dependencies]
lora = ["peft>=0.12"]
dev = ["pytest>=8", "matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]
